<resources>
    <string name="app_name">Filmoteca</string>

    <!-- Film Data -->
    <string name="data_title">Movie Information</string>
    <string name="director">Director:</string>
    <string name="year">Year:</string>
    <string name="format">Format:</string>
    <string name="genre">Genre:</string>
    <string name="imdb">IMDb</string>
    <string name="comments">Comments:</string>
    <string name="film_loc">Film Location</string>

    <string name="no_title">No Title</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>