<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FilmDataActivity">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:textStyle="bold"
                tools:text="Title"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <es.ua.eps.raw_filmoteca.tools.ImageRatio
                    android:id="@+id/imgCover"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:foregroundGravity="left"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/yosi"
                    android:layout_margin="20dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/tv_director"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Yoshi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/tv_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="1980" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/format"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/format_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="DVD" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/genre_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Drama" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/imdbUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imdb"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/tv_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                tools:text="@string/comments" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
